# rank-predictor-production1

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
apps/web/: cloudflare-pages-build.sh  package.json  tsconfig.json  wrangler.jsonc
apps/web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/[hub_slug]/: page.tsx
apps/web/src/app/exam/[exam_slug]/: page.tsx
apps/web/src/components/: PredictorForm.tsx
apps/web/src/data/: exams.ts  hubs.ts
engines/rank-core/: Cargo.toml  LICENSE
engines/rank-core/src/: lib.rs
scripts/: cloudflare-pages-build.sh
