[package]
name = "sikshalabh-rank-core"
version = "0.1.0"
edition = "2021"
description = "Tiny Rust/WebAssembly statistical rank prediction engine for Indian exam utilities."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
